@@ -1,3 +1,9 @@
+2007-03-22  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/30863
+	* g++.dg/template/error24.C: New test.
+	* g++.dg/parse/tmpl-outside1.C: Tweak error markers.
+
 2007-02-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	* g++.dg/ext/interface4.C, g++.dg/ext/interface4.h: New.
