@@ -1,3 +1,9 @@
+2007-03-22  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/30863
+	* parser.c (cp_parser_parse_and_diagnose_invalid_type_name): Do
+	not consume tokens when failing.
+
 2007-03-13  Alexandre Oliva  <aoliva@redhat.com>
 
 	* repo.c (init_repo): Initialize random_seed saved options.
